# kiro_custom_powers

./: .gitignore
powers/playwright-functional-testing/: .gitignore  POWER.md
powers/playwright-functional-testing/steering/: ci-and-advanced.md  page-object-model.md  project-setup.md  writing-tests.md
powers/power-evaluator/: POWER.md
powers/power-evaluator/steering/: common-issues.md  evaluation-checklist.md
powers/skill-agent-builder/: POWER.md
powers/skill-agent-builder/steering/: skill-authoring.md
test-kiro-powers-playwright/: package-lock.json
test-kiro-powers-playwright/fixtures/: test-data.ts
test-kiro-powers-playwright/pages/: CartPage.ts  InventoryPage.ts
test-kiro-powers-playwright/tests/checkout/: checkout.spec.ts
test-kiro-powers-strands-code-reviewer-agent/: .code-review-guidelines.example.md  README.md  pyproject.toml
test-kiro-powers-strands-code-reviewer-agent/code_reviewer/: __init__.py  guidelines.py  providers.py
testing/test-kiro-powers-playwright/: package.json  playwright.config.ts  swag_labs_requirements.txt
testing/test-kiro-powers-playwright/pages/: CheckoutPage.ts  LoginPage.ts
testing/test-kiro-powers-playwright/tests/auth/: login.spec.ts
testing/test-kiro-powers-playwright/tests/cart/: cart-management.spec.ts
testing/test-kiro-powers-playwright/tests/inventory/: sorting.spec.ts
testing/test-kiro-powers-strands-code-reviewer-agent/: .env.example
testing/test-kiro-powers-strands-code-reviewer-agent/code_reviewer/: agent.py  main.py  prompts.py  tools.py
(+1 files in other folders)
